--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,10 @@
-ABACATEPAY_API_KEY="abc_dev_D3S3ATYNruTUs4aGLYshDJfZ"
+# ABACATEPAY_API_KEY="abc_dev_D3S3ATYNruTUs4aGLYshDJfZ"
 # Firebase Configuration
-NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyBc6qLK26OL2OyiL9_KGxHgGAK7F2QSeko"
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="petcuidadapp.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_PROJECT_ID="petcuidadapp"
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="petcuidadapp.firebasestorage.app"
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="580513059937"
-NEXT_PUBLIC_FIREBASE_APP_ID="1:580513059937:web:22f832450444cc39f58620"
-NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyBsRWQy_dOhPcRmelfP7xFEHn7pLiIIycE"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="onlovepage.firebaseapp.com"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="onlovepage"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="onlovepage.firebasestorage.app"
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="315633769836"
+NEXT_PUBLIC_FIREBASE_APP_ID="1:315633769836:web:a9882c485fa1041916e749"
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+MERCADOPAGO_ACCESS_TOKEN=APP_USR-2156489387949131-122716-3f12782529bd27d56ddf4eca9b9af856-3095872114
