--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^12.7.0",
+    "mercadopago": "^2.11.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
