--- a/.env.local
+++ b/.env.local
@@ -6,5 +6,5 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID="onlovepage"
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="onlovepage.firebasestorage.app"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="315633769836"
 NEXT_PUBLIC_FIREBASE_APP_ID="1:315633769836:web:a9882c485fa1041916e749"
-NEXT_PUBLIC_BASE_URL=https://onlovepage.web.app/
+NEXT_PUBLIC_BASE_URL=https://onlove.vercel.app/
 MERCADOPAGO_ACCESS_TOKEN=APP_USR-2156489387949131-122716-3f12782529bd27d56ddf4eca9b9af856-3095872114
