--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mercadopago": "^2.11.0",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-snowfall": "^2.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
