--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,6 @@
 !.yarn/releases
 !.yarn/versions
 
-.env
-
 # testing
 /coverage
 
@@ -33,6 +31,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
+.env.local
 
 # vercel
 .vercel
